// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateLockFile catches errors 1`] = `
Array [
  Object {
    "cmd": "<yarn> install --ignore-scripts --ignore-engines --ignore-platform --mutex network:31879",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": null,
    },
  },
]
`;

exports[`generateLockFile detects yarnIntegrity 1`] = `
Array [
  Object {
    "cmd": "<yarn> install --ignore-scripts --ignore-engines --ignore-platform --mutex network:31879",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {},
    },
  },
  Object {
    "cmd": "<yarn> upgrade some-dep --ignore-scripts --ignore-engines --ignore-platform --mutex network:31879",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {},
    },
  },
]
`;

exports[`generateLockFile finds yarn embedded in renovate 1`] = `
Array [
  Object {
    "cmd": "<yarn> install --ignore-scripts --ignore-engines --ignore-platform --mutex network:31879",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": null,
    },
  },
]
`;

exports[`generateLockFile finds yarn globally 1`] = `
Array [
  Object {
    "cmd": "<yarn> install --ignore-scripts --ignore-engines --ignore-platform --mutex network:31879",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": null,
    },
  },
]
`;

exports[`generateLockFile generates lock files 1`] = `
Array [
  Object {
    "cmd": "<yarn> install --ignore-scripts --ignore-engines --ignore-platform --mutex network:31879",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {},
    },
  },
  Object {
    "cmd": "npx yarn-deduplicate@1.1.1 --strategy fewer && yarn",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {},
    },
  },
  Object {
    "cmd": "npx yarn-deduplicate@1.1.1 --strategy highest && yarn",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {},
    },
  },
]
`;

exports[`generateLockFile performs lock file updates 1`] = `
Array [
  Object {
    "cmd": "<yarn> install --ignore-scripts --ignore-engines --ignore-platform --mutex file:/tmp/yarn.mutext",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {},
    },
  },
  Object {
    "cmd": "<yarn> upgrade some-dep --ignore-scripts --ignore-engines --ignore-platform --mutex file:/tmp/yarn.mutext",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {},
    },
  },
]
`;

exports[`generateLockFile uses fallback yarn 1`] = `
Array [
  Object {
    "cmd": "yarn install --ignore-scripts --ignore-engines --ignore-platform --mutex network:31879",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": null,
    },
  },
]
`;
